Start to make functionality to User Profile VC and some edits with auth -created some UI of user's data -if user enter in Google account, app get data from google and duplicate it in own app -starting to use image picker

--- a/ForgetAboutTasks/Resources/Info.plist
+++ b/ForgetAboutTasks/Resources/Info.plist
@@ -2,10 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSRemindersUsageDescription</key>
-	<string>Please allow to use notification to get fresh reminders from calendar</string>
-	<key>NSCalendarsUsageDescription</key>
-	<string>This app need Your access to calendar to get data and send it</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.648937498880-cskk79iavdm6f4hr6h6m672pknig6744</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
