--- a/ForgetAboutTasks/Resources/Info.plist
+++ b/ForgetAboutTasks/Resources/Info.plist
@@ -13,6 +13,10 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>ConfigurationIntent</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
